# clothepickr

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  wrangler.jsonc
convex/: auth.ts  categories.ts  items.ts  laundryLogs.ts  outfits.ts  photos.ts  schema.ts  sync.ts  tsconfig.json  users.ts
convex/_generated/: api.d.ts
docs/: PR_DEV_TO_MAIN.md  desktop-tauri.md
e2e/: wardrobe.spec.ts
scripts/: tauri.mjs
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  AppShell.tsx  PwaUpdatePrompt.tsx  locale-context.ts  locale-provider.tsx  theme-context.ts  theme-provider.tsx
src/app/pages/: not-found.tsx
src/components/: brand-logo.tsx  category-panel-icon.tsx  color-swatch.tsx  page-header.tsx  photo-thumbnail.tsx  status-badge.tsx  status-panel-icon.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
src/features/auth/: auth-callback-page.tsx
src/features/categories/: categories-page.test.tsx  categories-page.tsx
src/features/dashboard/: dashboard-page.tsx
src/features/items/: item-detail-page.tsx  item-form.tsx  item-new-page.tsx  items-page.tsx
src/features/laundry/: laundry-page.tsx
src/lib/: colors.ts  constants.ts  runtime.ts  types.ts  utils.ts
src/lib/db/: index.ts  (+5 more)
src/test/: setup.ts
supabase/migrations/: 20260224210000_cloud_sync.sql  20260224224034_cloud_sync_retry.sql
(+28 files in other folders)
